fixed header overflow on mobile

--- a/app/assets/stylesheets/components/_work_card.scss
+++ b/app/assets/stylesheets/components/_work_card.scss
@@ -27,7 +27,6 @@
 }
 
 
-
 .work-tags-links {
   display: flex;
   align-items: center;
@@ -48,8 +47,12 @@
 
 // If the screen size is 767px wide or less, reduce icon size
 @media(max-width: 767px) {
+  .work-tags {
+    flex-direction: column;
+    align-items: center;
+  }
   .work-tags-links a {
-    font-size: 20px;
+    font-size: 22px;
   }
   .work-img-div {
     height: 40%
